<resources>
    <string name="app_name">SmartQuake</string>
    <string name="settings_button">Settings</string>
    <string name="resimulate_button">Resimulate excitation</string>
    <string name="reset_button">Reset simulation</string>
    <string name="save_button">Save</string>
    <string name="load_data_button">Load excitation data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="pref_gravity_title">Use gravity</string>
    <string name="snap_to_grid">Snap to grid</string>
    <string name="pref_gravity_summary">Depending on your device you might have to include gravity</string>


    <string name="pref_gravity_summaryOn">Use gravity.</string>
    <string name="pref_gravity_summaryOff">Do not use gravity.</string>


    <string name="pref_lumped_title">Lumped mass matrices</string>
    <string name="pref_lumped_summary_On">Using lumped mass matrices.</string>
    <string name="pref_lumped_summary_Off">Using consistent mass matrices.</string>

    <string name="pref_show_colors">Color stressed beams</string>
    <string name="pref_show_colors_on">Stressed and broken beams have a different color than non-stressed ones.</string>
    <string name="pref_show_colors_off">All beams have the same color.</string>


    <string name="pref_show_ground_displacements">Ground Displacements</string>
    <string name="pref_show_ground_displacements_summary_On">Show Ground Displacements on Replay.</string>
    <string name="pref_show_ground_displacements_summary_Off">Don\'t Show Ground Displacements on Replay</string>


    <string name="clear_canvas">Clear canvas</string>
    <string name="save_canvas">Save canvas</string>
    <string name="create_button">create</string>

    <string name="replay_running">Replay running.</string>
    <string name="replay">Replay</string>

    <!-- Preference modal analysis -->
    <string name="pref_modal_analysis_title">Modal analysis</string>
    <string name="pref_modal_analysis_summary_Off">Use normal scheme.</string>
    <string name="pref_modal_analysis_summary_On">Use modal analysis.</string>


    <!-- Preference modal analysis -->
    <string name="pref_modal_reduction_title">Modal Reduction</string>
    <string name="pref_modal_reduction_summary_Off">Use all eigen modes for modal analysis.</string>
    <string name="pref_modal_reduction_summary_On">Use given number of modes for modal analysis.</string>


    <!-- Preference  -->
    <string name="modes_slider_title">Number of Modes</string>


    <!-- Preference excitation frequency -->
    <string name="pref_excitation_frequency_title">Excitation frequency (in Hz)</string>



    <!-- Preference y excitation -->
    <string name="pref_y_excitation_title">Earth quake in vertical direction</string>
    <string name="pref_y_excitation_summary_Off">Ground cannot move in vertical direction during earth quake.</string>
    <string name="pref_y_excitation_summary_On">Ground can move in vertical direction during earth quake.</string>

    <!-- Preference slider excitation frequency -->
    <!--
    <string name="frequency_slider_title">Excitation frequency</string>
    <item name="frequency_slider_default" format="float" type="string">0.1</item>
    <string name="frequency_slider_message"></string>

    <string-array name="frequency_slider_summaries">
        <item>0.0 Hz</item>
        <item>0.1 Hz</item>
        <item>0.2 Hz</item>
        <item>0.3 Hz</item>
        <item>0.4 Hz</item>
        <item>0.5 Hz</item>
        <item>0.6 Hz</item>
        <item>0.7 Hz</item>
        <item>0.8 Hz</item>
        <item>0.9 Hz</item>
        <item>1.0 Hz</item>
        <item>1.1 Hz</item>
        <item>1.2 Hz</item>
        <item>1.3 Hz</item>
        <item>1.4 Hz</item>
        <item>1.5 Hz</item>
        <item>1.6 Hz</item>
        <item>1.7 Hz</item>
        <item>1.8 Hz</item>
        <item>1.9 Hz</item>
        <item>2.0 Hz</item>
        <item>2.1 Hz</item>
        <item>2.2 Hz</item>
        <item>2.3 Hz</item>
        <item>2.4 Hz</item>
        <item>2.5 Hz</item>
        <item>2.6 Hz</item>
        <item>2.7 Hz</item>
        <item>2.8 Hz</item>
        <item>2.9 Hz</item>
        <item>3.0 Hz</item>
        <item>3.1 Hz</item>
        <item>3.2 Hz</item>
        <item>3.3 Hz</item>
        <item>3.4 Hz</item>
        <item>3.5 Hz</item>
        <item>3.6 Hz</item>
        <item>3.7 Hz</item>
        <item>3.8 Hz</item>
        <item>3.9 Hz</item>
        <item>4.0 Hz</item>
        <item>4.1 Hz</item>
        <item>4.2 Hz</item>
        <item>4.3 Hz</item>
        <item>4.4 Hz</item>
        <item>4.5 Hz</item>
        <item>4.6 Hz</item>
        <item>4.7 Hz</item>
        <item>4.8 Hz</item>
        <item>4.9 Hz</item>
        <item>5.0 Hz</item>
        <item>5.1 Hz</item>
        <item>5.2 Hz</item>
        <item>5.3 Hz</item>
        <item>5.4 Hz</item>
        <item>5.5 Hz</item>
        <item>5.6 Hz</item>
        <item>5.7 Hz</item>
        <item>5.8 Hz</item>
        <item>5.9 Hz</item>
        <item>6.0 Hz</item>
        <item>6.1 Hz</item>
        <item>6.2 Hz</item>
        <item>6.3 Hz</item>
        <item>6.4 Hz</item>
        <item>6.5 Hz</item>
        <item>6.6 Hz</item>
        <item>6.7 Hz</item>
        <item>6.8 Hz</item>
        <item>6.9 Hz</item>
        <item>7.0 Hz</item>
        <item>7.1 Hz</item>
        <item>7.2 Hz</item>
        <item>7.3 Hz</item>
        <item>7.4 Hz</item>
        <item>7.5 Hz</item>
        <item>7.6 Hz</item>
        <item>7.7 Hz</item>
        <item>7.8 Hz</item>
        <item>7.9 Hz</item>
        <item>8.0 Hz</item>
        <item>8.1 Hz</item>
        <item>8.2 Hz</item>
        <item>8.3 Hz</item>
        <item>8.4 Hz</item>
        <item>8.5 Hz</item>
        <item>8.6 Hz</item>
        <item>8.7 Hz</item>
        <item>8.8 Hz</item>
        <item>8.9 Hz</item>
        <item>9.0 Hz</item>
        <item>9.1 Hz</item>
        <item>9.2 Hz</item>
        <item>9.3 Hz</item>
        <item>9.4 Hz</item>
        <item>9.5 Hz</item>
        <item>9.6 Hz</item>
        <item>9.7 Hz</item>
        <item>9.8 Hz</item>
        <item>9.9 Hz</item>
        <item>10 Hz</item>
    </string-array>
    -->
    <!-- End preference slider excitation frequency -->

    <!-- Preference slider displacement magnification -->
    <string name="loadVector_slider_title">Earth quake magnitude scale</string>
    <item name="loadVector_slider_default" format="float" type="string">0.2</item>
    <string name="loadVector_slider_message"></string>
    <string name="pref_show_raw_sensor_data_summary">Display raw sensor data while simulating.</string>
    <string name="pref_show_raw_sensor_data_title">Show raw sensor data</string>
    <string name="save_excitation">Save excitation data</string>
    <string name="replay_displacement_title">Replay simulation</string>

    <string-array name="loadVector_slider_summaries">
        <item>0.0</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.9</item>
        <item>5.0</item>
    </string-array>
    <!-- End preference slider displacement magnification -->

    <!-- Preference slider damping coefficient -->
    <string name="damping_slider_title">Damping coefficient</string>
    <item name="damping_slider_default" format="float" type="string">0.1</item>
    <string name="damping_slider_message"></string>
    <string name="act_settings_title">Settings</string>
    <string name="act_choose_eq_data_title">Choose Earthquake Source</string>
    <string name="act_create_building_title">Create A Building</string>

    <string-array name="damping_slider_summaries">
        <item> 0.00 </item>
        <item> 0.01 </item>
        <item> 0.02 </item>
        <item> 0.03 </item>
        <item> 0.04 </item>
        <item> 0.05 </item>
        <item> 0.06 </item>
        <item> 0.07 </item>
        <item> 0.08 </item>
        <item> 0.09 </item>
        <item> 0.10 </item>
        <item> 0.11 </item>
        <item> 0.12 </item>
        <item> 0.13 </item>
        <item> 0.14 </item>
        <item> 0.15 </item>
        <item> 0.16 </item>
        <item> 0.17 </item>
        <item> 0.18 </item>
        <item> 0.19 </item>
        <item> 0.20 </item>
        <item> 0.21 </item>
        <item> 0.22 </item>
        <item> 0.23 </item>
        <item> 0.24 </item>
        <item> 0.25 </item>
        <item> 0.26 </item>
        <item> 0.27 </item>
        <item> 0.28 </item>
        <item> 0.29 </item>
        <item> 0.30 </item>
        <item> 0.31 </item>
        <item> 0.32 </item>
        <item> 0.33 </item>
        <item> 0.34 </item>
        <item> 0.35 </item>
        <item> 0.36 </item>
        <item> 0.37 </item>
        <item> 0.38 </item>
        <item> 0.39 </item>
        <item> 0.40 </item>
        <item> 0.41 </item>
        <item> 0.42 </item>
        <item> 0.43 </item>
        <item> 0.44 </item>
        <item> 0.45 </item>
        <item> 0.46 </item>
        <item> 0.47 </item>
        <item> 0.48 </item>
        <item> 0.49 </item>
        <item> 0.50 </item>
    </string-array>
    <!-- End preference slider damping coefficient -->

</resources>
