<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:smartquake="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/sim_replay_displacement"
        android:icon="@drawable/ic_restore_white_24dp"
        android:title="@string/replay_displacement_title"
        smartquake:showAsAction="ifRoom" />

    <item android:id="@+id/sim_load_earthquake_data_button"
        android:icon="@drawable/ic_wifi_tethering_white_24dp"
        android:title="@string/load_data_button"
        smartquake:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save_simulation"
        android:title="@string/save_excitation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sim_reset_button"
        android:title="@string/reset_button"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sim_replay_excitation_button"
        android:title="@string/resimulate_button"
        smartquake:showAsAction="never"/>

</menu>